# DZ30

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
